# manager

./: .gitignore  LICENSE  MANIFEST.in  README.md  devkit.config.json.example  devkit.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
app/: main.py
app/templates/: dashboard.html  logs.html
src/airgap_devkit/: config.py  connectivity.py  launcher.py  main.py
src/airgap_devkit/static/: DOWNLOAD_HTMX.txt
src/airgap_devkit/templates/: dashboard.html
